updates to user model
